# mew

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/mew-cli/: Cargo.toml
crates/mew-cli/src/: args.rs  main.rs
crates/mew-cli/src/commands/: ask.rs  chat.rs  doctor.rs  init.rs  mod.rs  model.rs  provider.rs  session.rs  style.rs
crates/mew-common/: Cargo.toml
crates/mew-common/src/: config.rs
crates/mew-common/tests/: config_smoke.rs
crates/mew-index/: Cargo.toml
crates/mew-index/src/: lib.rs
crates/mew-provider/: Cargo.toml
crates/mew-provider/src/: gemini.rs  lib.rs  openai_compatible.rs  registry.rs  types.rs
crates/mew-session/: Cargo.toml
crates/mew-session/src/: lib.rs
crates/mew-ui/: Cargo.toml
crates/mew-ui/src/: banner.rs  cards.rs  render.rs  theme.rs
crates/mew-ui/tests/: ui_smoke.rs
docs/: PHASES.md
scripts/: check.sh  install.sh
