[package]
name = "mew-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "mew"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mew-common = { path = "../mew-common" }
mew-ui = { path = "../mew-ui" }

tokio.workspace = true
rpassword.workspace = true
mew-provider = { path = "../mew-provider" }
mew-session = { path = "../mew-session" }
ctrlc.workspace = true