[package]
name = "mew-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
mew-common = { path = "../mew-common" }
mew-provider = { path = "../mew-provider" }
