[package]
name = "mew-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
owo-colors.workspace = true
comfy-table.workspace = true
rand.workspace = true
terminal_size.workspace = true
textwrap.workspace = true
unicode-width.workspace = true
strip-ansi-escapes.workspace = true
mew-common = { path = "../mew-common" }
